syntax = "proto3";

package crimelab;

option go_package = "oda/api/proto";

service CrimeLabService {
  rpc AnalyzeEvidence(AnalyzeEvidenceRequest) returns (AnalysisResult) {}
}

message AnalyzeEvidenceRequest {
  string evidence_id = 1;
}

message AnalysisResult {
  string evidence_id = 1;
  string minigame_type = 2;
  string minigame_data = 3;
  string result = 4;
}
